Imported fix for issue #24: search bar different on safari

--- a/_sass/klise/_dark.scss
+++ b/_sass/klise/_dark.scss
@@ -226,6 +226,9 @@ body[data-theme="dark"] {
   .search-article {
     input[type="search"] {
       color: $dark-text-base-color;
+      &::-webkit-input-placeholder {
+        color: rgba(128,128,128,0.8);
+      }
     }
   }
 
