--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -344,18 +344,28 @@
   }
 
   input[type="search"] {
-    border: 0;
     top: 0;
-    left: 0;
-    position: absolute;
-    width: 100%;
-    border-radius: 5px;
-    padding: 10px 10px 10px 35px;
-    font-size: $base-font-size;
-    color: $text-base-color;
-    background-color: rgba(128, 128, 128, 0.1);
-    border: 1px solid rgba(128, 128, 128, 0.1);
+    left: 0;      left: 0;
+    position: absolute;     border: 0;
+    width: 100%;      width: 100%;
+    height: 40px;
     outline: none;
+    position: absolute;
+    border-radius: 5px;     border-radius: 5px;
+    padding: 10px 10px 10px 35px;     padding: 10px 10px 10px 35px;
+    font-size: $base-font-size; 
+    color: $text-base-color;      color: $text-base-color;
+    -webkit-appearance: none;
+    font-size: $base-font-size;
+    background-color: rgba(128, 128, 128, 0.1);     background-color: rgba(128, 128, 128, 0.1);
+    border: 1px solid rgba(128, 128, 128, 0.1);     border: 1px solid rgba(128, 128, 128, 0.1);
+    outline: none;      &::-webkit-input-placeholder {
+      color: #808080;
+    }
+    &::-webkit-search-decoration,
+    &::-webkit-search-results-decoration {
+      display: none;
+    }
   }
 }
 
